--- a/src/css/animations.scss
+++ b/src/css/animations.scss
@@ -1,14 +1,14 @@
 @keyframes background-shift {
     from { background-color: #E8ECD5; }
-    10% { background-color: #C5DEDA; }
-    20% { background-color: #C4C8D9; }
-    30% { background-color: #E0D4D6; }
-    40% { background-color: #E9DED7; }
+    10% { background-color: #c4e8ce; }
+    20% { background-color: #C5DEDA; }
+    30% { background-color: #C4C8D9; }
+    40% { background-color: #e1d6bd; }
     50% { background-color: #E8ECD5; }
-    60% { background-color: #E9DED7; }
-    70% { background-color: #E0D4D6; }
-    80% { background-color: #C4C8D9; }
-    90% { background-color: #C5DEDA; }
+    60% { background-color: #e1d6bd; }
+    70% { background-color: #C4C8D9; }
+    80% { background-color: #C5DEDA; }
+    90% { background-color: #c4e8ce; }
     to { background-color: #E8ECD5; }
 }
 
