--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,52 +1,11 @@
-@import url('./reset.css');
-@import url('./typography.scss');
-@import url('./animations.scss');
+@use './_reset.css';
+@use './typography.scss';
+@use './_animations.scss';
+@use './responsive.scss';
 
-.main-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.section {
-  position: relative;
-  margin-bottom: 60px;
-  padding: 20px 40px;
-  height: 800px;
-  div {
-    position: relative;
-  }
-}
-
-.landing-title {
-  position: relative;
-  top: 40%;
-  h1 {
-    text-align: center;
-  }
-}
-
-.work-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-end;
-}
-.work-title {
-  line-height: 0.8;
-  margin-bottom: 20px;
-}
-.work-desc {
-  z-index: 6;
-  width: 400px;
-  p {
-    font-size: 0.8rem;
-  }
-}
+@use './_global.scss';
+@use './sections/_landing.scss';
+@use './sections/_mindset.scss';
 
 .section-text {
   column-width: 20rem;
