--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -21,6 +21,12 @@
 
 $baseSize: 1rem;
 $baseColor: #3c211d;
+$h1: 4 * $baseSize;
+$h2: 3.5 * $baseSize;
+$h3: 3 * $baseSize;
+$h4: 2.5 * $baseSize;
+$h5: 2 * $baseSize;
+$h6: 1.5 * $baseSize;
 
 html, body {
   font-family: 'Happy Times at the IKOB', Times New Roman, serif;
@@ -34,20 +40,20 @@ p {
 }
 
 h1 {
-  font-size: 4 * $baseSize;
+  font-size: $h1;
 }
 h2 {
-  font-size: 3.5 * $baseSize;
+  font-size: $h2;
 }
 h3 {
-  font-size: 3 * $baseSize;
+  font-size: $h3;
 }
 h4 {
-  font-size: 2.5 * $baseSize;
+  font-size: $h4;
 }
 h5 {
-  font-size: 2 * $baseSize;
+  font-size: $h5;
 }
 h6 {
-  font-size: 1.5 * $baseSize;
+  font-size: $h6;
 }
