--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -34,14 +34,32 @@
   padding: 0;
 }
 .work-title {
-  line-height: 0.8;
+  line-height: 0.95;
   margin-bottom: 20px;
+  font-size: typography.$h6 * 0.7;
 }
 .work-desc {
   z-index: 6;
-  padding: 10px;
+  padding: 30px 10px;
   p {
     font-size: 0.8rem;
+  }
+}
+.work-video {
+  width: 100%;
+  .video {
+    position: relative;
+    padding-top: 30px;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    iframe, object, embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 @include responsive.responsive(responsive.$big-break) {
