--- a/src/css/sections/_landing.scss
+++ b/src/css/sections/_landing.scss
@@ -4,6 +4,7 @@
 .landing-title {
   position: relative;
   margin-top: 20px;
+  height: 800px;
   h1 {
     font-size: 6 * typography.$baseSize;
     line-height: 1.2;
