--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -16,7 +16,7 @@
     position: relative;
     margin-bottom: 60px;
     padding: 0 40px;
-    height: 800px;
+    min-height: 100vh;
     /* positional block within section */
     div > div {
       position: relative;
@@ -29,8 +29,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 800px;
-  margin: 0 auto;
+  // height: 800px;
+  margin: 0 auto 80px auto;
   padding: 0;
 }
 .work-title {
@@ -38,28 +38,41 @@
   margin-bottom: 20px;
   font-size: typography.$h6 * 0.7;
 }
-.work-desc {
+.work-info {
   z-index: 6;
-  padding: 30px 10px;
+  margin-top: 10px;
+  text-align: justify;
+  text-align-last: center;
+  align-self: center;
+  font-size: typography.$baseSize * 0.6;
   p {
     font-size: 0.8rem;
   }
 }
-.work-video {
+$columnCount: 3;
+$columnWidth: 200px;
+$columnGap: 1rem;
+.work-desc {
   width: 100%;
-  .video {
+  margin-top: 60px;
+  align-self: flex-end;
+  text-align: center;
+  font-size: typography.$baseSize * 0.7;
+  h1 {
+    font-size: typography.$h6;
+    text-align: center;
+  }
+  .full-desc {
+    font-size: typography.$baseSize * 0.8;
+    text-align: justify;
     position: relative;
-    padding-top: 30px;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    iframe, object, embed {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
+    bottom: 0;
+    // columns: $columnCount $columnWidth;
+    // -webkit-columns: $columnCount $columnWidth;
+    // -moz-columns: $columnCount $columnWidth;
+    // column-gap: $columnGap;
+    // -webkit-column-gap: $columnGap;
+    // -moz-column-gap: $columnGap;
   }
 }
 @include responsive.responsive(responsive.$big-break) {
