--- a/src/css/sections/_curatorial.scss
+++ b/src/css/sections/_curatorial.scss
@@ -2,12 +2,32 @@
 @use '../responsive.scss';
 
 .curatorial-text {
-  margin-top: 10px;
-  column-width: 20rem;
-  column-gap: 30px;
-  column-rule-width: 2px;
-  column-rule-style: solid;
-  max-width: 800px;
-  margin: 0 auto;
+  h1 {
+    font-size: typography.$h1 * 0.5;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  font-size: typography.$baseSize * 0.9;
   text-align: justify;
+  p {
+    margin-bottom: 10px;
+  }
+}
+
+$columnCount: 2;
+$columnWidth: 360px;
+$columnGap: 2rem;
+
+#exhibition-intro {
+  width: 800px;
+  margin: 30px auto 80px auto;
+  align-self: center;
+  .text-content {
+    columns: $columnCount $columnWidth;
+    -webkit-columns: $columnCount $columnWidth;
+    -moz-columns: $columnCount $columnWidth;
+    column-gap: $columnGap;
+    -webkit-column-gap: $columnGap;
+    -moz-column-gap: $columnGap;
+  }
 }
