--- a/src/css/sections/_mindset.scss
+++ b/src/css/sections/_mindset.scss
@@ -2,15 +2,13 @@
 @use '../responsive.scss';
 
 #mindset.work {
-  justify-content: space-around;
-  flex-wrap: wrap;
+  position: relative;
+  display: block;
   .work-image {
-    width: 480px;
-    align-self: flex-start;
-  }
-  .work-desc {
-    width: 400px;
-    align-self: center;
+    width: 320px;
+    position: relative;
+    top: 10px;
+    left: 12%;
   }
   @include responsive.responsive(responsive.$big-break) {
     .work-desc {
