reorganise css dependencies

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,8 +5,7 @@
 
 @use './_global.scss';
 @use './sections/_landing.scss';
-@use './sections/_mindset.scss';
+@use './sections/_work.scss';
 @use './sections/_video.scss';
-@use './sections/_basket.scss';
 
 @use './sections/_curatorial.scss';
