--- a/src/css/sections/_work.scss
+++ b/src/css/sections/_work.scss
@@ -2,14 +2,6 @@
 @use '../responsive.scss';
 
 #mindset.work {
-  position: relative;
-  display: block;
-  .work-image {
-    width: 600px;
-    position: relative;
-    top: 10px;
-    left: 12%;
-  }
   @include responsive.responsive(responsive.$big-break) {
     .work-desc {
       width: 400px;
@@ -23,18 +15,6 @@
 }
 
 #basket.work {
-  position: relative;
-  display: block;
-  .work-image {
-    width: 320px;
-    position: relative;
-    top: 30px;
-    left: 8%;
-  }
-  .work-desc {
-    width: 320px;
-    align-self: center;
-  }
   @include responsive.responsive(responsive.$big-break) {
     .work-desc {
       width: 400px;
@@ -47,61 +27,83 @@
   }
 }
 
-.work-image {
-  transition: transform 2s ease-in-out;
-}
-.work-image.aligned {
-  transform: scale(0.8);
-}
-
 .work {
+  position: relative;
   display: flex;
   flex-direction: row;
-  width: 100%;
-  // height: 800px;
-  margin: 0 auto 80px auto;
-  padding: 0;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  .work-image {
+    position: relative;
+    top: 0; left: 0;
+    max-width: 560px;
+    width: 90vw;
+  }
+  .work-desc {
+    max-width: 400px;
+  }
+  // .element-container {
+  //   width: 100%;
+  //   .work-element {
+  //     width: 100%;
+  //     max-height: 800px;
+  //     height: 100vh;
+  //     text-align: center;
+  //     display: flex;
+  //     flex-direction: row;
+  //     justify-content: space-evenly;
+  //     align-items: center;
+  //     .work-image, .work-desc {
+  //       align-self: center;
+  //       margin: 20px;
+  //     }
+  //   }
+  // }
 }
-.work-title {
-  line-height: 0.95;
-  margin-bottom: 20px;
-  font-size: typography.$h6 * 0.7;
-}
-.work-info {
-  z-index: 6;
-  margin-top: 10px;
-  text-align: justify;
-  text-align-last: center;
-  align-self: center;
-  font-size: typography.$baseSize * 0.6;
-  p {
-    font-size: 0.8rem;
+
+.video-work {
+  .work-element {
+    flex-direction: column;
+    height: fit-content;
+    max-height: none;
   }
 }
 $columnCount: 3;
 $columnWidth: 200px;
 $columnGap: 1rem;
 .work-desc {
-  width: 100%;
   margin-top: 60px;
-  align-self: flex-end;
+  padding: 120px 10px;
+  align-self: center;
   text-align: center;
   font-size: typography.$baseSize * 0.7;
-  h1 {
-    font-size: typography.$h6;
+  .work-title {
+    font-size: typography.$h5;
+    margin-bottom: 120px;
     text-align: center;
+    line-height: 0.95;
   }
   .full-desc {
     font-size: typography.$baseSize * 0.8;
     text-align: justify;
-    position: relative;
-    bottom: 0;
+    text-align-last: center;
+    margin-bottom: 60px;
     // columns: $columnCount $columnWidth;
     // -webkit-columns: $columnCount $columnWidth;
     // -moz-columns: $columnCount $columnWidth;
     // column-gap: $columnGap;
     // -webkit-column-gap: $columnGap;
     // -moz-column-gap: $columnGap;
+  }
+  .work-info {
+    z-index: 6;
+    margin-top: 40px;
+    text-align: justify;
+    text-align-last: center;
+    font-size: typography.$baseSize * 0.6;
+    p {
+      font-size: 0.8rem;
+    }
   }
 }
 @include responsive.responsive(responsive.$big-break) {
