--- a/src/css/sections/_curatorial.scss
+++ b/src/css/sections/_curatorial.scss
@@ -10,5 +10,12 @@
   justify-content: center;
   .text-content {
     width: 80%;
+    blockquote {
+      margin-top: 20px;
+      text-align: right;
+      float: right;
+      padding-left: 30px;
+      font-size: typography.$baseSize * 0.9;
+    }
   }
 }
