--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -24,11 +24,11 @@
   margin: 0 auto;
 }
 .sticky-bounding-box {
-  background-color: rgba(255,255,255,0.2);
+  // background-color: rgba(255,255,255,0.2);
   height: 300vh;
 }
 .sticky-element {
-  border: 1px solid rgba(255,180,189,0.8);
+  // border: 1px solid rgba(255,180,189,0.8);
   margin: 0 auto;
   width: 100%;
   height: fit-content;
