--- a/src/css/sections/_work.scss
+++ b/src/css/sections/_work.scss
@@ -38,6 +38,7 @@
     top: 0; left: 0;
     max-width: 560px;
     width: 90vw;
+    align-self: center;
   }
   .work-desc {
     max-width: 400px;
