--- a/src/css/sections/_video.scss
+++ b/src/css/sections/_video.scss
@@ -5,8 +5,8 @@ $videoWidth: 90%;
 
 .video-container {
   width: $videoWidth;
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 900px;
+  margin: 40px auto 10px auto;
   .video {
     position: relative;
     padding-top: 30px;
