--- a/src/css/sections/_curatorial.scss
+++ b/src/css/sections/_curatorial.scss
@@ -11,6 +11,7 @@
   .text-content {
     width: 100%;
     max-width: 1000px;
+    font-size: typography.$baseSize;
     blockquote {
       margin-top: 20px;
       padding: 0 60px;
