--- a/src/css/sections/_work.scss
+++ b/src/css/sections/_work.scss
@@ -106,14 +106,30 @@ $columnGap: 1rem;
   }
 }
 @include responsive.responsive(responsive.$small-break) {
+  .work {
+    padding-top: 100px;
+  }
+  .work-image {
+    width: 280px !important;
+    margin: 0 auto;
+  }
   .work-title {
-    font-size: typography.$h6 * 0.6;
+    font-size: typography.$h6 * 0.7 !important;
     margin-top: 0;
+    margin-bottom: 20px !important;
   }
   .work-desc {
+    margin: 20px auto 0 auto;
+    padding-top: 10px;
     p {
-      font-size: typography.$baseSize * 0.55;
+      font-size: typography.$baseSize * 0.7 !important;
       margin-bottom: 0.55rem;
     }
+  }
+  .full-desc {
+    margin-bottom: 0 !important;
+  }
+  .work-info {
+    margin-top: 20px !important;
   }
 }
