--- a/src/css/sections/_curatorial.scss
+++ b/src/css/sections/_curatorial.scss
@@ -22,6 +22,7 @@
 #credits {
   font-size: typography.$baseSize * 0.88;
   margin-top: 120px;
+  margin-bottom: 20px !important;
   .text-container {
     flex-direction: row;
     justify-content: flex-start;
@@ -34,5 +35,10 @@
   .logo {
     width: 25%;
     padding: 20px;
+  }
+}
+@include responsive.responsive(responsive.$small-break) {
+  blockquote {
+    padding: 0 40px !important;
   }
 }
