--- a/src/css/sections/_work.scss
+++ b/src/css/sections/_work.scss
@@ -101,22 +101,21 @@ $columnGap: 1rem;
 }
 @include responsive.responsive(responsive.$small-break) {
   .work {
-    padding-top: 100px;
+    padding-top: 40px;
   }
   .work-image {
-    width: 280px !important;
+    width: 180px !important;
     margin: 0 auto;
   }
   .work-title {
-    font-size: typography.$h6 * 0.7 !important;
-    margin-top: 0;
-    margin-bottom: 20px !important;
+    font-size: typography.$h6 * 0.5 !important;
+    margin: 10px auto !important;
   }
   .work-desc {
-    margin: 20px auto 0 auto;
+    margin: 0 auto;
     padding-top: 10px;
     p {
-      font-size: typography.$baseSize * 0.7 !important;
+      font-size: 0.55rem !important;
       margin-bottom: 0.55rem;
     }
   }
@@ -125,5 +124,6 @@ $columnGap: 1rem;
   }
   .work-info {
     margin-top: 20px !important;
+    font-size: 0.55rem !important;
   }
 }
