--- a/src/css/sections/_video.scss
+++ b/src/css/sections/_video.scss
@@ -23,23 +23,16 @@ $videoWidth: 90%;
   }
 }
 .video-desc {
-  max-width: 360px;
+  max-width: 320px;
   margin: 0 auto;
   padding: 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  h1 {
-    font-size: typography.$h6 * 0.6;
-    text-align: justify;
-    text-align-last: justify;
-    line-height: 0.95;
-  }
   .video-info {
     z-index: 6;
     margin-top: 5px;
-    text-align: justify;
-    text-align-last: center;
+    text-align: center;
     font-size: typography.$baseSize * 0.6;
     p {
       font-size: 0.8rem;
