--- a/src/css/sections/_landing.scss
+++ b/src/css/sections/_landing.scss
@@ -14,11 +14,8 @@
     font-size: 6 * typography.$baseSize;
     line-height: 1.2;
     margin-bottom: 3rem;
-
+    letter-spacing: -0.2rem;
     text-align: center;
-    .subtitle {
-      // letter-spacing: 0.3rem;
-    }
   }
   h3 {
     div {
