--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -22,7 +22,7 @@
 }
 
 $baseSize: 1rem;
-$baseColor: #3c211d;
+$baseColor: #85816A;
 $h1: 4 * $baseSize;
 $h2: 3.5 * $baseSize;
 $h3: 3 * $baseSize;
