final colour scheme w title

--- a/src/css/_animations.scss
+++ b/src/css/_animations.scss
@@ -3,8 +3,8 @@
     10% { background-color: #712917; }
     20% { background-color: #4E0A04; }
     30% { background-color: #3A0C03; }
-    40% { background-color: #2D0C0C; }
-    50% { background-color: #611C15; }
+    40% { background-color: #3A0C03; }
+    50% { background-color: #2D0C0C; }
     60% { background-color: #2D0C0C; }
     70% { background-color: #3A0C03; }
     80% { background-color: #4E0A04; }
